# misterio

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOP.md  HACK.md  LICENSE  Makefile  PUBLISHING.md  README.md  go.mod  misterio  misterio-ecs.sh  misterio-ssh.sh  misterio.sh  opt.md  pyproject.toml  run-pipeline.sh
.github/: FUNDING.yml
.github/workflows/: go.yml  pylint.yml  rust.yml
cmd/misterio/: main.go  main_test.go
cmd/misterio-add/: main.go
cmd/misterio-mv/: main.go
cmd/misterio-rm/: main.go
etc/: codeSpaceSetup.sh
etc/codex/: config.toml
hosts/: misterio.toml
hosts/instance-20210426-1655/: elastic-service@DEMO1.env
hosts/wonderboy/: backup_me@example.env  elastic-service@DEMO1.env
internal/config/: config.go  config_test.go
internal/misterio/: helpers.go  helpers_test.go  manager.go
old_sh_version/: README.md  misterio-ssh
pipelines/backup_demo/: Dockerfile
roles/activemq/: Dockerfile  docker-compose.yml
roles/activemq/5.15.9-conf/: users.properties
roles/backup_me/: Dockerfile  RSYNC_BACKUP_README.md  backup-me.sh  docker-compose.yml
roles/elastic-service/: docker-compose.yml
roles/elk/: docker-compose.yml
roles/gollum_wiki/: docker-compose.yml
roles/jenkins-with-docker/: Dockerfile  docker-compose.yml  runGitAndJenkins.sh
roles/misterio-test/: docker-compose.yaml
roles/nextcloud/: docker-compose.yml
roles/nginx/: Dockerfile  docker-compose.yml  nginx.conf
roles/pgvector/: docker-compose.yaml
roles/rabbitmq/: docker-compose.yml
roles/sonarqube/: docker-compose.yml
roles/sqlite_web_browser/: docker-compose.yml
roles/ubuntu-on-dock/: docker-compose.yml
roles/watchtower/: docker-compose.yml
roles/zabbix/: README.md  docker-compose.yml
sh/: installCodex.sh  publishPackage.sh
spec/: 01-RUST.md
src/: app.rs  cli.rs  config.rs  lib.rs  tests.rs
src/misterio/: misterio.py  misterio_mv.py  misterio_util.py
tests/: conftest.py  test_misterio.py  test_misterio_util.py
