# Configuration based on tutorial at 
# https://packaging.python.org/en/latest/tutorials/packaging-projects/
[project]
name = "misterio"
version = "0.1.2"
description = "misterio CLI"
authors = [
  { name="Giovanni Giorgi", email="jj@gioorgi.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[projects.urls]
Homepage = "https://github.com/daitangio/misterio"
Issues = "https://github.com/daitangio/misterio/issues"

[project.scripts]
misterio = "misterio.misterio:misterio"
misterio-mv = "misterio.misterio_util:misterio_mv"
misterio-rm = "misterio.misterio_util:misterio_rm"

[build-system]
# Flit Core is a lightweight tool designed to simplify the process of packaging and distributing Python projects
# following PEP 517
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"